--- a/test.html
+++ b/test.html
@@ -31,8 +31,8 @@
             25% {
                
                 transform: translateX(400px);
-            }
-
+            }kkkk
+              k'k'k'k
             50%{
                 transform: translate(400px,200px);
             }
